@@ -7,7 +7,9 @@ HEAD
 	+ Bug fix: enable the log events dispatcher by default now works
 	+ Bug fix: fixed _lock function in EBox::Module::Base
 	+ Bug fix: composites honor menuFolder()
-	+ Add support for in-place edition for boolean types. (Closes #1664)
+	+ Add support for in-place edition for boolean types. (Closes
+	  #1664)
+	+ Add method to add new database table columnts to EBox::Migration::Helpers
 1.3.14
 	+ Bug fix: fix critical bug in migration helper that caused some log
 	  log tables to disappear
